# global_game_jam_2022

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/: README.md
credits/: CREDITS.md
src/: constants.rs  main.rs  particle.rs  player.rs  scoreboard.rs  ui.rs  walls.rs
