[package]
name = "global_game_jam_2022"
version = "0.1.0"
edition = "2021"
authors = ["Paul Easter, Avi Vajpeyi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
rand = "0.8"

[build-dependencies]
embed-resource = "1.4"
