[package]
name = "global_game_jam_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git="https://github.com/bevyengine/bevy", rev = "458cb7a9e93dab3127bb99ce7bf8cfc3af18851d" }
rand = "0.8"


[dependencies.web-sys]
version = "0.3"
features = [ "console" ]
